--- a/input.conf
+++ b/input.conf
@@ -19,6 +19,10 @@ F1 add sub-delay -0.1
 F2 add sub-delay +0.1 
 F4 cycle-values video-aspect-override "16:9" "4:3" "2.35:1" "-1"
 
+q quit-watch-later 1
+Shift+q quit 0
+Ctrl+c quit 1
+
 Meta+v  script-message-to Mac_Integration OpenFromClipboard
 TAB     script-message-to Mac_Integration ShowFinder
 Ctrl+f  script-message-to Mac_Integration ShowInFinder
